--- a/app/src/main/res/layout/image_row.xml
+++ b/app/src/main/res/layout/image_row.xml
@@ -1,42 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="1dp"
-    android:orientation="horizontal"
-    >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <data>
+        <variable
+            name="vo"
+            type="com.example.unsplash.vo.ImageVO" />
+        <variable
+            name="bindingAdapter"
+            type="com.example.unsplash.adapter.BindingAdapterKt" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:adjustViewBounds="true"/>
-
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@id/imageView"
-        app:layout_constraintLeft_toLeftOf="@id/imageView"
-        />
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_marginBottom="1dp"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/likeButton"
-        android:src="@drawable/img_heart_red"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintRight_toRightOf="@id/imageView"
-        app:layout_constraintBottom_toBottomOf="@id/imageView"
-        />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:glideImage="@{vo.urls.regular}"
+            android:adjustViewBounds="true"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="20dp"
+            android:textColor="@color/white"
+            android:text="@{vo.user.name}"
+            app:layout_constraintBottom_toBottomOf="@id/imageView"
+            app:layout_constraintLeft_toLeftOf="@id/imageView"
+            />
+
+        <ImageView
+            android:id="@+id/likeButton"
+            android:src="@drawable/img_heart_red"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintRight_toRightOf="@id/imageView"
+            app:layout_constraintBottom_toBottomOf="@id/imageView"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
