--- a/app/src/main/res/layout/activity_unsplash.xml
+++ b/app/src/main/res/layout/activity_unsplash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout  xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -25,24 +25,22 @@
             android:id="@+id/selectBtn"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:onClick="@{v-> vm.selectDbAll()}"
             android:text="DB조회"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:listitem="@layout/image_row"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:listData="@{vm.imageData}"
-            app:layout_constraintTop_toBottomOf="@id/selectBtn"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
+            app:layout_constraintTop_toBottomOf="@id/selectBtn"
+            app:listData="@{vm.imageData}"
+            tools:listitem="@layout/image_row" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
