[ShinAhRan] 버그 수정.

--- a/app/src/main/res/layout/image_row.xml
+++ b/app/src/main/res/layout/image_row.xml
@@ -7,6 +7,9 @@
         <variable
             name="vo"
             type="com.example.unsplash.vo.ImageVO" />
+        <variable
+            name="bindingAdapter"
+            type="com.example.unsplash.adapter.BindingAdapterKt" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
